--- a/Eyosias Binyam/TrasactionHome.css
+++ b/Eyosias Binyam/TrasactionHome.css
@@ -703,7 +703,11 @@
     transform: rotateY(0deg);
   }
   
-  
+  .graph-container {
+    margin-left: 0rem;
+    height: 100%;
+    width: 100%; /* Adjust height as needed */
+  }
   
 @media screen and (min-width: 580px) {
 
@@ -752,6 +756,10 @@
   }
   .main-body{
     margin-top: 7rem;
+  }
+  .graph-container {
+    height:150%;
+    width: 100%; /* Adjust height as needed */
   }
 
 }
@@ -856,8 +864,8 @@
 
   }
   .graph-container canvas {
-    width: 400%;
-    height: 300%;
+    width: 100%;
+    height: 200%;
   }
  
   
@@ -935,7 +943,7 @@ p {
 
 }
 .graph-container canvas {
-  width: 400%;
+  width: 300%;
   height: 300%;
 }
 
