--- a/Eyosias Binyam/TrasactionHome.css
+++ b/Eyosias Binyam/TrasactionHome.css
@@ -414,8 +414,8 @@
 	height: 60vh;
 	transition: transform 0.8s;
 	transform-style: preserve-3d;
- 
- position: absolute;
+  cursor: pointer;
+  position: absolute;
   top: 20rem;
   left: 0;
   right: 0;
@@ -511,7 +511,7 @@
 	text-align: center;
 }
 .deposit-card .card-back {
-  z-index: 2;
+     z-index: 1;
     opacity: 1;
     transition: all 0.5s;
   transition: opacity 0.5s;
@@ -520,6 +520,42 @@
 	
   }
  
+.card-back {
+  background-color: #d2f5d4;
+  color: #333;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.card-back h2 {
+  margin: 0;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.card-back p {
+  margin: 10px 0;
+}
+
+.card-back img {
+  width: 50px;
+  height: 50px;
+}
+#go-back-btn {
+  padding: 10px 20px;
+  background-color: #337ab7;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+#go-back-btn:hover {
+  background-color: #23527c;
+}
   .withdrawal-card {
     display: none;
     border-radius: 4px;
@@ -531,7 +567,7 @@
     transition: transform 0.8s;
     transform-style: preserve-3d;
     position: relative;
-
+    cursor: pointer;
     top:17rem;
     left: 0;
     right: 0;
@@ -759,6 +795,14 @@
   .main-body{
     margin-top: 7rem;
   }
+
+  .deposit-card{
+    margin-left: 10rem;
+    top: 9.8rem;
+    height: 75vh;
+    width: 60vw;
+  }
+
   .graph-container {
     height:150%;
     width: 100%; /* Adjust height as needed */
@@ -860,6 +904,13 @@
   .btn:hover {
     transform: translateY(-5px);
   }
+  .deposit-card{
+    margin-left: 12rem;
+    top: 10rem;
+    height: 75vh;
+    width: 50vw;
+  }
+
   .withdrawal-card {
     
     margin:0px 270px;
@@ -914,35 +965,24 @@
   /* Ensure that the main content is not covered by the nav-bar */
    
 }
-
-h1 {
-  font-size: 2.5rem;
-  margin-bottom: 30px;
+.deposit-card{
+  margin-left: 35rem;
+  top: 7rem;
+  height: 75vh;
+  width: 50vw;
 }
-
-p {
-  font-size: 1.2rem;
-  line-height: 1.8;
-  margin-bottom: 30px;
+.deposit-card .btn {
+  margin-top: 10rem;
+  padding-left: 10rem;
+ 
 }
-
-.btn {
-  font-size: 1.2rem;
-  padding: 15px 25px;
-  border-radius: 30px;
-  background-color: #2e9cca;
-  color: #fff;
-  text-decoration: none;
-  transition: all 0.3s ease;
+#enter-btn{
+  padding: 2rem 8rem;
+  text-align: center;
 }
-
-.btn:hover {
-  transform: translateY(-5px);
-}
-.withdrawal-card {
-  
-  margin:0px 270px;
-
+.withdrawal-card{
+  top: 0rem;
+  margin: 0px ;
 }
 .graph-container {
   height: 260%; /* Adjust height as needed */
